<resources>
    <string name="app_name">Toopan</string>
    <string name="loginInApp">ورود به برنامه</string>
    <string name="saveInfo">ثبت اطلاعات</string>
    <string name="login_des">نام کاربری و رمز عبور شما از طریق تیم پشتیبانی در اختیار شما قبلا قرار گرفته است.</string>
    <string name="userName">نام کاربری</string>
    <string name="password">رمز عبور</string>
    <string name="todo">todo</string>
    <string name="about">تماس با پشتیبانی</string>
    <string name="longText">لورم ایپسوم متنی نامفهوم در صنعت چاپ و گرافیک هست که طراحان از آن استفاده میکنند</string>
    <string name="profile">پروفایل</string>
    <string name="notification">اعلانات</string>
    <string name="tournament">مسابقات</string>
    <string name="salons">سالن ها</string>
    <string name="edit_info_user">ویرایش اطلاعات کاربری</string>
    <string name="transaction">تراکنش های مالی</string>
    <string name="about_as">ارتباط با ما</string>
    <string name="exit_account">خروج از حساب کاربری</string>
    <string name="noInternet">عدم دسترسی به اینترنت.</string>
    <string name="errorRequired">فیلد را کامل کنید</string>
    <string name="Image">Image</string>
    <string name="updateIsSuccessfully">ٍثبت اطلاعات با موفقیت انجام شد</string>
    <string name="please_grant_GPS_permission">دسترسی GPS لاظم است</string>
    <string name="permission_denied_can_not_find_you_on_map">دسترسی GPS ندارم نمیتوانم روی مپ پیدات کنم</string>


    // body server
    <string name="username">username</string>
    <string name="passwordServer">password</string>
    <string name="salonId">salonId</string>
    <string name="salonImageName">salonImageName</string>
    <string name="name_lastname">نام و نام خانوادگی</string>
    <string name="phone_number">شماره تلفن</string>
    <string name="NationalCode">کد ملی</string>
    <string name="State">استان</string>
    <string name="city">شهرستان</string>
    <string name="sex">جنسیت</string>
    <string name="info_account">اطلاعات حساب</string>
    <string name="info_account_des">این اطلاعات برای پرداخت مبلغ سانس های رزرو شده لازم است و بصورت محرمانه و فقط در اختیار اپلیکیشن توپان قرار دارد.</string>
    <string name="info_account_number">شماره حساب را با خط تیره وارد کنید. به عنوان مثال: ‌۵۸۰‍۱-۴۳۲۴۵۳۴-۱</string>
    <string name="account_number">شماره حساب</string>
    <string name="card_number">شماره کارت</string>
    <string name="selectState">استان را انتخاب کنید</string>
    <string name="permissionTittleDialog">برای این کار به دسترسی نیاز داریم</string>
    <string name="setting">تنظیمات</string>
    <string name="cancel">لغو</string>
    <string name="GalleryOrCamera">انتخاب مسیر</string>
    <string name="gallery">گالری</string>
    <string name="camera">دوربین</string>
    <string name="salonNoExist">شما هنوز سالنی ثبت نکرده اید</string>
    <string name="desNoSalonExist">این قسمت مربوط به مدیریت سالن و سانس ها می باشد لطفا اولین سالن خود را ثبت کنید</string>
    <string name="makeNewSalons">ثبت سالن جدید</string>
    <string name="hintSearchSalon">جستجو اسم سالن…</string>
    <string name="hintSearchAddress">جستجو آدرس…</string>
    <string name="addNewSalons">افزودن سالن جدید</string>
    <string name="titlePriceSince">قیمت هر سانس:</string>
    <string name="aboutSince">وضعیت:</string>
    <string name="inProcess">در حال بررسی</string>
    <string name="manageSince">مدیریت سانس ها</string>
    <string name="startJam"><big><font color="#000" face="estedad_regular">برگزاری جام</font></big></string>
    <string name="detailsAndEdit"><big><font color="#17ACFF" face="estedad_regular">جزئیات و ویرایش</font></big></string>
    <string name="addOrEditSalon">افزدون یا ویرایش سالن</string>
    <string name="nameSalon">اسم سالن</string>
    <string name="TypeInterfaceSalon">نوع کاربری سالن</string>
    <string name="TypeOwnershipSalon">نوع مالکیت سالن</string>
    <string name="addressSalon">آدرس سالن</string>
    <string name="selectOnMap">انتخاب روی نقشه</string>
    <string name="noSalonInMyCity">سالن در استان و شهرستان محل زندگی خودم واقع است.</string>
    <string name="exactAddress">آدرس دقیق</string>
    <string name="PossibilitiesSalon">امکانات سالن</string>
    <string name="timing">زمان بندی</string>
    <string name="timingStartEnd">ساعت شروع و پایان کار</string>
    <string name="durationOfEachSession">مدت زمان هر سانس (به دقیقه)</string>
    <string name="PriceSession">هزینه سانس</string>
    <string name="PriceSessionOfToman">هزینه هر سانس (به تومان)</string>
    <string name="DesADSalon">این هزینه کلی برا همه سانس ها می باشد. در صورتی که قیمت بعضی از سانس ها متفاوت باشد میتوانید از قسمت مدیریت سانس بعد از پایان ثبت سالن اقدام فرمایید.</string>
    <string name="uploadImageAsSalon">آپلود عکس از سالن</string>
    <string name="uploadImageSalon">آپلود عکس سالن</string>
    <string name="submit">ثبت</string>
    <string name="accept">تایید</string>
    <string name="forDeleteHoldItem">برای حذف کردن, روی عکس نگه دارید</string>
    <string name="re_auth_try_again">اترایزیشن</string>
    <string name="oneSelectPossibilities">حداقل یک امکانات را برای سالن انتخاب کنید</string>
    <string name="active">فعال</string>
    <string name="deActive">غیر فعال</string>
    <string name="week">هفته</string>
    <string name="month">هفته</string>
    <string name="hours">ساعت</string>
    <string name="forMen">آقایان</string>
    <string name="forWomen">بانوان</string>
    <string name="reserved">رزرو شده</string>
    <string name="free">آزاد</string>
    <string name="disable">غیرفعال</string>
    <string name="desSansReserve">برای دیدن جزئیات و اعمال تغییرات بر روی سانس مورد نظر کلیک کنید</string>
    <string name="cancel2">انصراف</string>
    <string name="editSans">ویرایش سانسها</string>
    <string name="desForSansEdit">تغییر پارامترهای زیر برای کل سانس های انتخاب شده اعمال میشود</string>
    <string name="cancelReserve">لغو رزرو</string>
    <string name="submitPrice">تعیین قیمت</string>
    <string name="acceptChanged">اعمال تغییرات</string>

</resources>