<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        app:showAsAction="always"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
    <item
        android:id="@+id/notificationsFragment"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_notification"
        android:title="@string/notification" />
    <item
        android:id="@+id/tournamentFragment"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_game"
        android:title="@string/tournament"/>
    <item
        android:id="@+id/salonsFragment"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_clubs"
        android:title="@string/salons"/>

</menu>